# serializer version: 1
# name: test_extended_timezone_compat
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART;TZID=CET:20240426T140000
  DTEND;TZID=CET:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  END:VCALENDAR
  '''
# ---
# name: test_invalid_timezone_compat
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART:20240426T140000
  DTEND:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:W. Europe Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:UTC
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
